# ees-buggy-project

./: .gitignore  CMakeLists.txt  Lernportfolio.tex  README.md  ees_buggy  main.c  main.cpp  rot360.csv
inc/: constants.h  wheel.h
inc/applications/: room_measurement.h  wasd_control.h
inc/driving/: automatic_movement.h
inc/magnetic_sensor/: compass.h  magnetic_sensor.h
inc/motor_engine/: constants.h  direction.h  motor_engine.h  movement_type.h  wheel.h
inc/ultrasonic_sensor/: ultrasonic_sensor.h
inc/util/: degree.h  strong_type_defs.h  time_util.h  vertex2D.h
lernportfolio_assets/: Schaltplan_Ultraschallsensor.xcf
src/: wheel.cpp
src/applications/: room_measurement.cpp  wasd_control.cpp
src/driving/: automatic_movement.cpp
src/magnetic_sensor/: compass.cpp  magnetic_sensor.cpp
src/motor_engine/: motor_engine.cpp  wheel.cpp
src/ultrasonic_sensor/: ultrasonic_sensor.cpp
test_data_magnetic_sensor/: magnetic_sensor_analysis.py  northData.txt  outputData.txt  outputDataWithError.txt  rot360.csv  rot360_analysis.py  rot360_error.csv
test_data_ultrasonic/: 100cm.txt  10cm.txt  15cm  20cm.txt  30cm  50cm  5cm.txt  analysis.py  data.csv
test_inc/: calibration.h  test.h  test_util.h
test_inc/driving/: test_automatic_movement.h
test_src/: calibration.cpp  test.cpp
test_src/driving/: test_automatic_movement.cpp
